==> lupyuen/pinetime-rust-mynewt/libs/adc_stm32l4/src/adc_stm32l4.c <==
#include <hal/hal_bsp.h>
#include <assert.h>
#include "os/mynewt.h"
#include <mcu/cmsis_nvic.h>
#include "stm32l4xx_hal_dma.h"
#include "stm32l4xx_hal_adc.h"
#include "stm32l4xx_hal_rcc.h"
#include "stm32l4xx_hal_cortex.h"
#include "stm32l4xx_hal.h"
#include "adc_stm32l4/adc_stm32l4.h"
#include "mcu/stm32l4xx_mynewt_hal.h"
#include <adc/adc.h>
#define STM32L4_IS_DMA_ADC_CHANNEL(CHANNEL) ((CHANNEL) <= DMA_CHANNEL_2)

static int
stm32l4_adc_open(struct os_dev *odev, uint32_t wait, void *arg)
{
    DMA_HandleTypeDef *hdma;
    ADC_HandleTypeDef *hadc;
    struct stm32l4_adc_dev_cfg *cfg;
    struct adc_dev *dev;
    int rc;

    assert(odev);
    rc = OS_OK;
    dev = (struct adc_dev *) odev;

    if (os_started()) {
        rc = os_mutex_pend(&dev->ad_lock, wait);
        if (rc != OS_OK) {
            goto err;
        }
    }

    if (odev->od_flags & OS_DEV_F_STATUS_OPEN) {
        os_mutex_release(&dev->ad_lock);
        rc = OS_EBUSY;
        goto err;
    }

    stm32l4_adc_init(dev);

    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;
    hadc = cfg->sac_adc_handle;
    hdma = hadc->DMA_Handle;

    if (hdma) {
        adc_dma[stm32l4_resolve_dma_handle_idx(hdma)] = dev;
    }

    return (OS_OK);
err:
    return (rc);
}

static int
stm32l4_adc_close(struct os_dev *odev)
{
    struct adc_dev *dev;

    dev = (struct adc_dev *) odev;

    stm32l4_adc_uninit(dev);

    if (os_started()) {
        os_mutex_release(&dev->ad_lock);
    }

    return (OS_OK);
}

static int
stm32l4_adc_configure_channel(struct adc_dev *dev, uint8_t cnum,
        void *cfgdata)
{
    int rc;
    ADC_HandleTypeDef *hadc;
    struct stm32l4_adc_dev_cfg *cfg;
    struct adc_chan_config *chan_cfg;
    GPIO_InitTypeDef gpio_td;

    rc = OS_EINVAL;

    if (dev == NULL) {
        goto err;
    }

    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;
    hadc = cfg->sac_adc_handle;
    chan_cfg = &((struct adc_chan_config *)cfg->sac_chans)[cnum];

    cfgdata = (ADC_ChannelConfTypeDef *)cfgdata;

    if ((HAL_ADC_ConfigChannel(hadc, cfgdata)) != HAL_OK) {
        goto err;
    }

    dev->ad_chans[cnum].c_res = chan_cfg->c_res;
    dev->ad_chans[cnum].c_refmv = chan_cfg->c_refmv;
    dev->ad_chans[cnum].c_configured = 1;
    dev->ad_chans[cnum].c_cnum = cnum;

    //  Temperature, VREF and VBAT channels don't use GPIO.  No need to init GPIO.
    if (cnum != MYNEWT_ADC_CHANNEL_TEMPSENSOR && 
        cnum != MYNEWT_ADC_CHANNEL_VREFINT &&
        cnum != MYNEWT_ADC_CHANNEL_VBAT) {
        //  Init GPIO.
        if (stm32l4_resolve_adc_gpio(hadc, cnum, &gpio_td)) {
            goto err;
        }
        hal_gpio_init_stm(gpio_td.Pin, &gpio_td);
    }

    return (OS_OK);
err:
    return (rc);
}

static int
stm32l4_adc_set_buffer(struct adc_dev *dev, void *buf1, void *buf2,
        int buflen)
{
    struct stm32l4_adc_dev_cfg *cfg;
    int rc;


    assert(dev != NULL && buf1 != NULL);
    rc = OS_OK;
    buflen /= sizeof(uint32_t);

    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;

    cfg->primarybuf = buf1;
    cfg->secondarybuf = buf2;
    cfg->buflen = buflen;

    return rc;
}

static int
stm32l4_adc_release_buffer(struct adc_dev *dev, void *buf, int buf_len)
{
    ADC_HandleTypeDef *hadc;
    struct stm32l4_adc_dev_cfg *cfg;

    assert(dev);
    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;
    hadc = cfg->sac_adc_handle;

    HAL_ADC_Stop_DMA(hadc);

    return (0);
}

static int
stm32l4_adc_sample(struct adc_dev *dev)
{
    int rc;
    ADC_HandleTypeDef *hadc;
    struct stm32l4_adc_dev_cfg *cfg;

    assert(dev);
    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;
    hadc = cfg->sac_adc_handle;

    rc = OS_EINVAL;

    if (HAL_ADC_Start_DMA(hadc, cfg->primarybuf, cfg->buflen) != HAL_OK) {
        ++stm32l4_adc_stats.adc_dma_start_error;
        goto err;
    }

    rc = OS_OK;

err:
    return rc;
}

static int
stm32l4_adc_read_channel(struct adc_dev *dev, uint8_t _cnum, int *result)
{
    //  New implementation that actually blocks when reading a channel.
    ADC_HandleTypeDef *hadc;
    struct stm32l4_adc_dev_cfg *cfg;
    int val = -1;

    assert(dev != NULL && result != NULL);
    cfg  = (struct stm32l4_adc_dev_cfg *)dev->ad_dev.od_init_arg;
    hadc = cfg->sac_adc_handle;
    assert(hadc);

    //  Calibrate AD converter.
    while (HAL_ADCEx_Calibration_Start(hadc, ADC_SINGLE_ENDED) != HAL_OK) {}

    //  Start reading ADC values and convert them by rank.
    HAL_ADC_Start(hadc);

    //  Wait for ADC conversion to be completed.
    HAL_StatusTypeDef rc = HAL_ADC_PollForConversion(hadc, 10 * 1000);  //  Wait up to 10 seconds.  TODO: Yield to task scheduler while waiting.
    assert(rc == HAL_OK);
    if (rc != HAL_OK) { HAL_ADC_Stop(hadc); return rc; }  //  Exit in case of error.

    //  Fetch the converted ADC value.
    val = HAL_ADC_GetValue(hadc);
    *result = val;

    //  Stop reading ADC values.
    HAL_ADC_Stop(hadc);
    return (OS_OK);
}

int
stm32l4_adc_dev_init(struct os_dev *odev, void *arg)
{
    struct stm32l4_adc_dev_cfg *sac;
    struct adc_dev *dev;

    sac = (struct stm32l4_adc_dev_cfg *) arg;

    assert(sac != NULL);

    dev = (struct adc_dev *)odev;

    os_mutex_init(&dev->ad_lock);

    dev->ad_chans = (void *) sac->sac_chans;
    dev->ad_chan_count = sac->sac_chan_count;

    OS_DEV_SETHANDLERS(odev, stm32l4_adc_open, stm32l4_adc_close);

    dev->ad_funcs = &stm32l4_adc_funcs;

    return (OS_OK);
}
